# segmentation_framework

./: .gitignore  .pre-commit-config.yaml  README.md  initial_training_config.yml  pyproject.toml
examples/brisc/: dataset.py
src/segworks/: config_parsing.py
src/segworks/data_utils/: __init__.py  dataset.py
src/segworks/models/: __init__.py  model.py  unet.py
src/segworks/training/: __init__.py  __main__.py  logging.py  metrics.py  train.py  trainer.py  training_params.py
src/segworks/transforms/: __init__.py  _base.py  crop.py  flips.py  resize.py  to_tensor.py
