[project]
name = "segworks"
version = "0.0.1"
description = "Full training, evaluation framework and model collection for semantic segmentation tasks"
authors = [
    { name = "Robert Attila Magyar", email = "robertmagyar.023@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "onnx",
    "onnxruntime",
    "onnxscript",
    "opencv-python",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py313"
line-length = 100

select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]

ignore = [
    "E203", # whitespace before ':', conflicts with black-style slicing
    "E266", # too many leading '#' (useful for section headers)
]

exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
]

[tool.ruff.isort]
known-first-party = ["segworks"]
combine-as-imports = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]